// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`imdb > 'GET /movies/{movieId} (simple)' 1`] = `
"package example

import (
	context "context"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Imdb.GetMovie(
		context.TODO(),
		"movie_xyz",
	)
}
"
`;

exports[`imdb > 'POST /movies/create-movie (simple)' 1`] = `
"package example

import (
	context "context"
	acme "github.com/acme/acme-go"
	client "github.com/acme/acme-go/client"
	option "github.com/acme/acme-go/option"
)

func do() {
	client := client.NewClient(
		option.WithToken(
			"<YOUR_API_KEY>",
		),
	)
	client.Imdb.CreateMovie(
		context.TODO(),
		&acme.CreateMovieRequest{
			Title:  "The Matrix",
			Rating: 8.2,
		},
	)
}
"
`;
